# cextras

./: .Mk.yaml  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yaml  codecov.yaml
include/: meson.build
include/cextras/: collection.h  concurrency.h  endian.h  error.h  macro.h  memory.h  types.h  unicode.h
lib/: meson.build
lib/collection/: buffer.c  collector.c  lru.c  meson.build  radix_tree.c  rc_hash_map.c  rc_map.c  rc_radix_tree.c
lib/concurrency/: future.c  meson.build  semaphore.c  threadpool.c
lib/memory/: meson.build  prealloc_pool.c  rc.c
lib/unicode/: meson.build  table_codegen.c  unicode-width.c  utf16.c  utf8.c
lib/unicode/codegen/: byte_size.c  char_info.c  char_width.c
test/: endian.c  meson.build  unicode.c
test/collection/: lru_test.c  radix_map.c  radix_tree.c  rc_radix_tree_test.c
test/concurrency/: future_test.c  threadpool_test.c
test/memory/: prealloc_pool.c
testlib/: driver.c  meson.build
testlib/include/: testlib.h
tests/: meson.build  testlib.c
tests/collection/: buffer_test.c  lru_test.c  rc_hash_map_test.c  rc_map_test.c
tests/concurrency/: future_test.c  threadpool_test.c
